samples/_failures_safe/1761609491_96ad07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a2473e8.c: In function ‘main’:
./samples/SAFE/__tmp_8a2473e8.c:152:9: error: expected expression at end of input
  152 |         if (decompressed.data == NULL || decompressed.size ==
      |         ^~
./samples/SAFE/__tmp_8a2473e8.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a2473e8.c:152:9: error: expected declaration or statement at end of input
